<resources>
    <string name="app_name">proyectoAplicacion</string>
    <string name="lblInisioSesion">Inicio de sesion</string>
    <string name="lblTitulo">Compra y venta neza ,chimalhuacan y chalco</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnIniciar">Ingresar</string>
    <string name="btnRegistrar">Registrarte</string>
    <string name="inageDescripcion">Logo de la aplicacion</string>
    <string name="lblBienvenido">Bienvenido</string>
    <string name="lblRegistro">Crea tu cuenta</string>
    <string name="txtNombre">Nombre:</string>
    <string name="txtApellido">Apellido:</string>
    <string name="txtTelefono">Telefono(10 digitos)</string>
    <string name="txtEmail">Email:</string>
    <string name="btnPerfil">Mi perfil</string>
    <string name="btnMisCosas">Mis ventas</string>
    <string name="btnServicios">Servicios</string>
    <string name="btnProductos">Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_new">Punto medio</string>
    <string name="btnModificar">Modificar perfil</string>
    <string name="lblSe">Se:</string>
    <string name="lblProducto">Producto:</string>
    <string name="lblDescripcion">Detalles:</string>
    <string name="lblPrecio">Precio:</string>
    <string name="lblNombre">Nombre:</string>
    <string name="lblTelefono">Telefono:</string>
    <string name="lblEmail">Email:</string>
    <string name="lblServicio">Servicio:</string>
    <string name="lblProducto_servicio">Producto/Servicio</string>
    <string name="lblDisponibilidad">Disponibilidad:</string>
    <string name="btnAgregarProduto">Agregar producto</string>
    <string name="btnAgregarServicio">Agregar Servicio</string>
    <string name="lblDatosDeUsuario">Datos de usuario</string>
    <string name="txtSexo">Sexo:</string>
    <string name="chkHabilitar">Cambiar contraseña</string>
    <string name="txtPasswordActual">Contraseña actual</string>
    <string name="txtPasswordNueva">Contraseña nueva:</string>
    <string name="btnGuardar">Guardar</string>
    <string name="agregarProducto">Agregar nuevo producto</string>
    <string name="txtTitulo">Titulo:</string>
    <string name="agregarServicio">Agregar un nuevo servicio</string>
    <string name="btnEliminarPost">Eliminar post</string>
    <string name="lblBajas">Da de baja un post</string>
    <string name="btnBuscar">Buscar</string>
</resources>