<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarPostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblBajas"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtTitulo"
            android:layout_margin="1sp"/>

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblDescripcion"
            android:editable="false"
            android:layout_margin="1sp"/>

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblPrecio"
            android:editable="false"
            android:layout_margin="1sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnBuscar"
                android:layout_weight="1"
                android:layout_margin="2sp"/>
            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEliminarPost"
                android:layout_weight="2"
                android:layout_margin="2sp"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>