<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarDatosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDatosDeUsuario"
                android:gravity="center_horizontal"
                android:layout_margin="2sp"/>

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNombre"
                android:layout_margin="2sp"
                android:editable="false"/>
            <EditText
                android:id="@+id/txtSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtSexo"
                android:layout_margin="2sp"
                android:editable="false"/>
            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtTelefono"
                android:layout_margin="2sp"/>
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtEmail"
                android:layout_margin="2sp"/>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGuardar"
                android:layout_gravity="center"
                android:layout_margin="3sp"/>


        </LinearLayout>


    </ScrollView>

</FrameLayout>