<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarProductosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregarProducto"
            android:layout_gravity="center"
            android:layout_margin="2sp"/>

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtTitulo"
            android:layout_margin="2sp"/>

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblDescripcion"
            android:layout_margin="2sp"/>

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblPrecio"
            android:layout_margin="2sp"/>

        <Spinner
            android:id="@+id/spinnerProposito"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_margin="2sp"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4sp"/>

    </LinearLayout>

</FrameLayout>