<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFBFB"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblInisioSesion"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTitulo"
        android:textSize="15sp"
        android:textColor="#050505"
        android:layout_marginBottom="20sp"
        android:gravity="center_horizontal"/>
    <ImageView
        android:layout_width="300sp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:contentDescription="@string/inageDescripcion"
        android:src="@drawable/logo2"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtUsername"
                android:textSize="20sp"
                android:inputType="text"
                android:layout_marginTop="15sp"/>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPassword"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:layout_marginTop="15sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnIniciar"
                android:textSize="30sp"
                android:layout_marginTop="15sp"
                android:background="#03A9F4"
                android:textColor="#ffffff"
                android:onClick="IniciarSesion"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistrar"
                android:textSize="30sp"
                android:layout_marginTop="15sp"
                android:background="#ffffff"
                android:onClick="Registrar"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>