<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro">

    <TextView
        android:textColor="#03A9F4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRegistro"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/txtNombre"
                android:textSize="20sp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/txtApellido"
                android:textSize="20sp"
                android:inputType="text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="@string/txtTelefono"
                    android:textSize="20sp"
                    android:inputType="number"
                    android:layout_marginRight="15sp"/>
                <Spinner
                    android:id="@+id/spinnerSexo"
                    android:layout_width="150sp"
                    android:layout_height="40sp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/txtEmail"
                android:textSize="20sp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/txtUsername"
                android:textSize="20sp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/txtPassword"
                android:textSize="20sp"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistrar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textSize="22sp"
                android:onClick="Registrar"
                android:background="#03A9F4"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblInisioSesion"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#03A9F4"
                android:onClick="Login"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>