<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblSe"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/lblSe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vende"
            android:textSize="17sp"
            android:layout_weight=".8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblServicio"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/lblProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Servicio"
            android:textSize="17sp"
            android:layout_weight=".8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDescripcion"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Detalles"
            android:textSize="17sp"
            android:layout_weight=".8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPrecio"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/lblPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Precio"
            android:textSize="17sp"
            android:layout_weight=".8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNombre"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textSize="17sp"
            android:layout_weight=".8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTelefono"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/lblTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefono"
            android:textSize="17sp"
            android:layout_weight=".8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblEmail"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="17sp"
            android:layout_weight=".8" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>